force-app/main/default/objects/Order/Order.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>