force-app/main/default/objects/Order/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>