force-app/main/default/objects/Order/fields/Estimated_Ship_Date_ESD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ship_Date_ESD__c</fullName>
    <inlineHelpText>The date the product is expected to be shipped</inlineHelpText>
    <label>Estimated Ship Date (ESD)</label>
    <type>Date</type>
</CustomField>