force-app/main/default/objects/Order/fields/Installation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Completed</label>
    <type>Checkbox</type>
</CustomField>