force-app/main/default/objects/Order/fields/Legacy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Amount__c</fullName>
    <label>Legacy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>