force-app/main/default/objects/Order/fields/Legacy_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Primary_Contact__c</fullName>
    <label>Legacy Primary Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>