force-app/main/default/objects/Order/fields/Manufactureres__c.field-meta.xml
<CustomField>
    <fullName>Manufactureres__c</fullName>
    <label>Manufacturer&apos;s Reference</label>
    <length>155</length>
    <type>Text</type>
</CustomField>