force-app/main/default/objects/Order/fields/of_Renewable_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Renewable_Products__c</fullName>
    <label># of Renewable Products</label>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__SubscriptionType__c</field>
        <operation>equals</operation>
        <value>Renewable</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>