force-app/main/default/objects/Order/fields/One_time_Amount__c.field-meta.xml
<CustomField>
    <fullName>One_time_Amount__c</fullName>
    <label>One-time Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>