force-app/main/default/objects/Order/fields/Paid_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Paid_Upfront__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Upfront</label>
    <type>Checkbox</type>
</CustomField>