force-app/main/default/objects/Order/fields/Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Payment_Percentage__c</fullName>
    <formula>IF(TotalAmount &gt; 0,
(TotalAmount - Quickbooks_Invoice_Balance__c ) / TotalAmount,
0)</formula>
    <label>Payment Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>