force-app/main/default/objects/Order/fields/Quickbooks_Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_Balance__c</fullName>
    <label>Quickbooks Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>