force-app/main/default/objects/Order/fields/Quickbooks_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_PO_Number__c</fullName>
    <label>Quickbooks PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>