force-app/main/default/objects/Order/fields/REF__c.field-meta.xml
<CustomField>
    <fullName>REF__c</fullName>
    <formula>SBQQ__Quote__r.REF__c</formula>
    <label>REF</label>
    <type>Text</type>
</CustomField>