force-app/main/default/objects/Order/fields/Sum_of_Year_3__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Year_3__c</fullName>
    <label>Sum of Year 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>