force-app/main/default/objects/Order/recordTypes/Arbutus_West_AgencyLtd.recordType-meta.xml
<RecordType>
    <fullName>Arbutus_West_AgencyLtd</fullName>
    <active>true</active>
    <description>This is the record type for Arbutus West Agency</description>
    <label>Arbutus West Agency Ltd.</label>
</RecordType>