force-app/main/default/objects/Order/recordTypes/AWALDistributor.recordType-meta.xml
<RecordType>
    <fullName>AWALDistributor</fullName>
    <active>true</active>
    <description>This is the record type for Arbutus West Distributor</description>
    <label>AWAL Distributor</label>
</RecordType>