force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>PO_Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Manufacturer__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Manufactureres__c</columns>
    <columns>Estimated_Ship_Date_ESD__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Quickbooks_Invoice_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>