force-app/main/default/objects/Order/listViews/Arbutus_West_Agency_List.listView-meta.xml
<ListView>
    <fullName>Arbutus_West_Agency_List</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Revenue__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Estimated_Ship_Date_ESD__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>PO_Number__c</columns>
    <columns>ORDER.PO_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <label>Arbutus West Agency List</label>
</ListView>