force-app/main/default/objects/Order/listViews/Arbutus_West_Agency_Ltd_Powell.listView-meta.xml
<ListView>
    <fullName>Arbutus_West_Agency_Ltd_Powell</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manufacturer__c</field>
        <operation>contains</operation>
        <value>Powell</value>
    </filters>
    <label>Arbutus West Agency Ltd. - Powell</label>
</ListView>