force-app/main/default/objects/Order/listViews/AWAL_Distributor.listView-meta.xml
<ListView>
    <fullName>AWAL_Distributor</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.AWALDistributor</value>
    </filters>
    <label>AWAL Distributor</label>
</ListView>