force-app/main/default/objects/Order/listViews/CSSP_Orders.listView-meta.xml
<ListView>
    <fullName>CSSP_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Manufacturer__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manufacturer__c</field>
        <operation>contains</operation>
        <value>schneider</value>
    </filters>
    <label>AWAL Distributor - Schneider Service</label>
</ListView>