force-app/main/default/objects/Order/listViews/I_Gard.listView-meta.xml
<ListView>
    <fullName>I_Gard</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Manufacturer__c</field>
        <operation>equals</operation>
        <value>i-gard</value>
    </filters>
    <label>I-Gard</label>
</ListView>